--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/moment": "^2.13.0",
-    "@types/node": "^14.0.5",
+    "@types/node": "^14.6.2",
     "@types/sequelize": "^4.28.9",
     "@types/terminal-kit": "^1.28.2",
     "@types/validatorjs": "^3.15.0",
     "@types/winston": "^2.4.4",
+    "appmetrics-dash": "^5.3.0",
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
