--- a/package.json
+++ b/package.json
@@ -12,27 +12,34 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/gm": "^1.18.9",
     "@types/http-status-codes": "^1.2.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/moment": "^2.13.0",
-    "@types/node": "^14.6.2",
+    "@types/multer": "^1.4.4",
     "@types/sequelize": "^4.28.9",
     "@types/terminal-kit": "^1.28.2",
     "@types/validatorjs": "^3.15.0",
     "@types/winston": "^2.4.4",
     "appmetrics-dash": "^5.3.0",
     "bcrypt": "^4.0.1",
+    "blob": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "gm": "^1.23.1",
     "http-status-codes": "^1.4.0",
+    "image-conversion": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
+    "resize-img": "^2.0.0",
     "sequelize": "^5.21.11",
     "sequelize-typescript": "^1.1.0",
     "terminal-kit": "^1.35.3",
@@ -41,5 +48,8 @@
     "typescript": "^3.9.3",
     "validatorjs": "^3.18.1",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.8"
   }
 }
